--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ p{
   margin: 20px 10px;
 }
 @media (max-width: 1028px) {
-  #title{
+  #title .container-fluid{
     text-align: center;
   }
   .title-image{
